# l-system-simulator

./: README.md  l-system-simulator.cabal  stack.yaml
config/: dragoncurve.json
src/: Main.hs  Turtle.hs
system/: plant.json  sierpinski.json
