cabal-version: 1.12

name:           l-system-simulator
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/johesoman/l-system-viewer#readme>
homepage:       https://github.com/johesoman/l-system-simulator#readme
bug-reports:    https://github.com/johesoman/l-system-simulator/issues
author:         Joel Söderman
maintainer:     johesoman@gmail
copyright:      2019 Joel Söderman
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/johesoman/l-system-simulator

executable l-system-simulator
  main-is: Main.hs
  other-modules:
      Turtle
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , unordered-containers
    , text
    , bytestring
    , gloss
    , aeson
    , aeson-pretty
    , parsec
    , parsec3-numbers >= 0.1.0
  default-language: Haskell2010
